<resources>
    <string name="app_name">PointMe</string>
    <string name="action_settings">Settings</string>

    <string name="heading_destination">Navigating to %1$s</string>
    <string name="heading_distance">%1$s %2$s remaining</string>
    <string name="heading_direction">Destination is %1$s</string>

    <string name="attribution_hyperlink"><a href="https://www.flaticon.com/authors/kiranshastry">Arrow icon from kiranshastry</a></string>
    <string name="init_heading_destination">Calculating destination…</string>
    <string name="init_heading_distance">Calculating distance…</string>
    <string name="init_heading_direction">Calculating direction…</string>
    <string name="arrival_button">I\'ve Arrived!</string>
    <string name="previous_activities_header">Previous Activities</string>
    <string name="getting_started_text">Looks like you don\'t have any activities yet! Go ahead and press \"Start Navigating\" or the search bar above to get started.</string>
    <string name="getting_started_button">Start Navigating</string>
    <string name="place_name_subheader">%1$s - %2$s %3$s %4$s</string>
    <string name="navigation_error">Unable to navigate without permission</string>
    <string name="navigation_error_action">RETRY</string>
    <string name="place_error">Unable to select location</string>

    <!-- Preferences -->
    <string name="distance_title">Distance units</string>
    <string name="title_activity_settings">Settings</string>
    <string name="distance_settings_key">Settings</string>
    <string name="default_distance_setting">miles</string>
    <string name="keep_on_settings_key">KeepScreenOn</string>
    <string name="keep_on_settings_title">Keep Screen On When Navigating</string>
    <string name="keep_on_settings_summary">When checked, your phone\'s screen will stay on when navigating with the app open</string>
    <string name="default_keepon_setting">true</string>
    <string name="notification_settings_key">Notify</string>
    <string name="notification_settings_title">Show Notification When Navigating</string>
    <string name="notification_settings_summary">When checked, a persistent notification will appear</string>
    <string name="default_notification_setting">true</string>

    <!-- Notifications -->
    <string name="default_channel_name">default</string>
    <string name="default_channel_description">Default channel for the PointMe app</string>
</resources>