<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:defaultValue="@string/default_distance_setting"
        app:entries="@array/distance_entries"
        app:entryValues="@array/distance_values"
        app:key="@string/distance_settings_key"
        app:title="@string/distance_title"
        app:useSimpleSummaryProvider="true" />
    <CheckBoxPreference
        app:defaultValue="@string/default_keepon_setting"
        app:key="@string/keep_on_settings_key"
        app:title="@string/keep_on_settings_title"
        app:summary="@string/keep_on_settings_summary"/>
    <CheckBoxPreference
        app:defaultValue="@string/default_notification_setting"
        app:key="@string/notification_settings_key"
        app:title="@string/notification_settings_title"
        app:summary="@string/notification_settings_summary"/>
</PreferenceScreen>